compiler-core/src/go/tests/snapshots/gleam_core__go__tests__externals__generic_type_with_attribute.snap
---
source: compiler-core/src/go/tests/externals.rs
expression: "\n@external(go, \"some/path\", \"SomeType\")\npub type Thing(a, b)\n"
snapshot_kind: text
---
----- SOURCE CODE

@external(go, "some/path", "SomeType")
pub type Thing(a, b)


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
  path_P "some/path"
)

const _ = gleam_P.Use_Import
const _ = path_P.Use_Import
const Use_Import byte = 0

type Thing_t[I gleam_P.Type[I], J gleam_P.Type[J]] = path_P.SomeType[I, J]
