compiler-core/src/go/tests/snapshots/gleam_core__go__tests__externals__module_fn.snap
---
source: compiler-core/src/go/tests/externals.rs
expression: "\n@external(go, \"utils\", \"Inspect\")\nfn show(x: anything) -> Nil"
snapshot_kind: text
---
----- SOURCE CODE

@external(go, "utils", "Inspect")
fn show(x: anything) -> Nil

----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
  utils_P "utils"
)

const _ = gleam_P.Use_Import
const _ = utils_P.Use_Import
const Use_Import byte = 0

func show[I gleam_P.Type[I]](x I) gleam_P.Nil_t {
  return utils_P.Inspect[I](x)
}
