compiler-core/src/go/tests/snapshots/gleam_core__go__tests__externals__no_module.snap
---
source: compiler-core/src/go/tests/externals.rs
expression: "\n@external(go, \"\", \"One\")\npub fn one(x: Int) -> Int {\n  1\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

@external(go, "", "One")
pub fn one(x: Int) -> Int {
  1
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0
