compiler-core/src/go/tests/snapshots/gleam_core__go__tests__externals__private_attribute_go.snap
---
source: compiler-core/src/go/tests/externals.rs
expression: "\n@external(go, \"one\", \"OneGo\")\nfn one(x: Int) -> Int {\n  todo\n}\n\npub fn main() {\n  one(1)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

@external(go, "one", "OneGo")
fn one(x: Int) -> Int {
  todo
}

pub fn main() {
  one(1)
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
  one_P "one"
)

const _ = gleam_P.Use_Import
const _ = one_P.Use_Import
const Use_Import byte = 0

func one(x gleam_P.Int_t) gleam_P.Int_t {
  return one_P.OneGo(x)
}

func Main() gleam_P.Int_t {
  return one(1)
}
