compiler-core/src/go/tests/snapshots/gleam_core__go__tests__externals__same_name_external.snap
---
source: compiler-core/src/go/tests/externals.rs
expression: "\n@external(go, \"thingy\", \"Fetch\")\npub fn fetch(request: Nil) -> Nil"
snapshot_kind: text
---
----- SOURCE CODE

@external(go, "thingy", "Fetch")
pub fn fetch(request: Nil) -> Nil

----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
  thingy_P "thingy"
)

const _ = gleam_P.Use_Import
const _ = thingy_P.Use_Import
const Use_Import byte = 0

func Fetch(request gleam_P.Nil_t) gleam_P.Nil_t {
  return thingy_P.Fetch(request)
}
